account-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
    type: NodePort
    selector:
      app: account-service
    ports:
      - port: 80
        targetPort: 8080
        protocol: TCP
