account-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: account-service
spec:
  ingressClassName: nginx
  rules:
    - host: account.v-chain.vn
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: account-service
              port:
                number: 80
